# IntersectSegment

./: .gitignore  CMakeLists.txt  README.md
include/: Intersect.h  Segment3D.h  Vector3D.h
include/view/: App.h  Compute.h  Panel.h  Render.h  State.h
src/: main.cpp
src/core/: Intersect.cpp  Segment3D.cpp  Vector3D.cpp
tests/: tests_intersect.cpp  tests_segment3D.cpp
view/: main_view.cpp
view/src/: app.cpp  compute.cpp  panel.cpp  render_2d.cpp  render_3d.cpp
